# Projet_CHP

./: .gitignore  README.md
BIFLUIDAVECCIPROB/: Dragonite.stl  cmake_install.cmake
BIFLUIDAVECCIPROB/prediction-projection/: LaplacianPetsc.cpp  Prediction.cpp  Prediction.hpp  Projection.cpp  Projection.hpp
BNR/: UnitTestPoisson.cpp  UnitTestTransport.cpp  test_repro.cpp
Bifluidefinal/: CMakeCache.txt  CMakeLists.txt  Makefile  TaylorGreen  TaylorGreen.cpp  TaylorGreen_0.vtu  TaylorGreen_10.vtu  TaylorGreen_100.vtu  TaylorGreen_110.vtu  TaylorGreen_120.vtu  TaylorGreen_130.vtu  TaylorGreen_140.vtu  TaylorGreen_150.vtu  TaylorGreen_160.vtu  TaylorGreen_170.vtu  TaylorGreen_180.vtu  TaylorGreen_190.vtu  TaylorGreen_20.vtu  TaylorGreen_200.vtu  TaylorGreen_30.vtu  TaylorGreen_40.vtu  TaylorGreen_50.vtu  TaylorGreen_60.vtu  TaylorGreen_70.vtu  TaylorGreen_80.vtu  TaylorGreen_90.vtu  lambda-laplacian.cpp  laplacian-json.cpp  laplacian.cpp  levelset.cpp  poisson.cpp  poissonCos.cpp  time-laplacian.cpp  time-laplacian.py  time-poisson.cpp  time-poisson.py  transport.cpp
Bifluidefinal/examples/: levelset.py
Bifluidefinal/prediction-projection/: Prediction.cpp
Modif pour convection operator/: Gradient.hpp
Readme/: README.md
Validation/TaylorGreen/: CMakeLists.txt  TaylorGreen.cpp  TaylorGreen_0.vtu  TaylorGreen_10.vtu  TaylorGreen_100.vtu  TaylorGreen_110.vtu  TaylorGreen_120.vtu  TaylorGreen_130.vtu  TaylorGreen_140.vtu  TaylorGreen_150.vtu  TaylorGreen_160.vtu  TaylorGreen_170.vtu  TaylorGreen_180.vtu  TaylorGreen_190.vtu  TaylorGreen_20.vtu  TaylorGreen_200.vtu  TaylorGreen_30.vtu  TaylorGreen_40.vtu  TaylorGreen_50.vtu  TaylorGreen_60.vtu  TaylorGreen_70.vtu  TaylorGreen_80.vtu  TaylorGreen_90.vtu  TaylorGreen_exact.vtu
Validation/TestUnitTaylorGreen/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
Validation/Validation Poisson/: CMakeCache.txt  LaplacianCos.vtu  Makefile  cmake_install.cmake  poissonCos  poissonCos.cpp
Validation/Validation TaylorGreen/: Makefile  TaylorGreen  UnitTestTaylor.cpp
Validation/Validation transport/: transportAtmospheric  transportAtmospheric.cpp
Validation/cas_tests/: CMakeLists.txt  grid.cpp  interpolator.cpp  laplacian.cpp  levelset.cpp  neos.cpp
Validation/core/: BoundaryConditions.cpp  BoundaryConditions.hpp  CommonTools.cpp  CommonTools.hpp  Elasticity.cpp  Elasticity.hpp  Grid.cpp  Grid.hpp  ILevelSet.cpp  ILevelSet.hpp  InputFileReader.cpp  InputFileReader.hpp  Neos.hpp.in  NeosInterface.cpp  NeosInterface.hpp  NeosLevelSet.cpp  NeosLevelSet.hpp  NeosPiercedVector.hpp  NeosPiercedVector.tpp  NeosSolution.hpp  SimulationParameters.cpp  SimulationParameters.hpp  StencilBuilder.cpp  StencilBuilder.hpp  Transport.cpp  Transport.hpp  UserDataComm.hpp  UserDataComm.tpp  Utils.hpp
Validation/fich_cas_test/: main.cpp  transport.cpp
Validation/geometry/: ACylinder.cpp  ACylinder.hpp  AGeometry.hpp  ASphere.cpp  ASphere.hpp  CPGeometry.hpp  Circle.cpp  Circle.hpp  Cylinder.cpp  Cylinder.hpp  Geo2D.cpp  Geo2D.hpp  Geo3D.cpp  Geo3D.hpp  Geometry.hpp  NGeometry.hpp  STLGeometry.cpp  STLGeometry.hpp  Sphere.cpp  Sphere.hpp
Validation/maths/: Function.cpp  Function.hpp  Gradient.cpp  Laplacian.cpp  Laplacian.hpp  LaplacianFactory.cpp  LaplacianFactory.hpp
Validation/maths/interpolator/: Distance.cpp  Distance.hpp  IInterpolator.hpp  MLS2D.cpp  RBF.cpp  (+8 more)
Version_de_Base/Poisson/: CMakeLists.txt  poissonCos.cpp
Version_de_Base/Transport/: CMakeLists.txt  transportAtmospheric.cpp
Version_de_Base/prediction-projection/: Prediction.cpp
bifluide/: CMakeCache.txt  Gradient2.cpp  Makefile  TaylorGreen  TaylorGreen.cpp  TaylorGreen_0.vtu  TaylorGreen_10.vtu  TaylorGreen_20.vtu  cmake_install.cmake
bifluide/prediction-projection/: Gradient2.hpp  LaplacianFactory2.cpp  LaplacianFactory2.hpp  Prediction.cpp  Prediction.hpp  Projection.cpp  Projection.hpp
parallel_faible/: efficacity_raff_0.001.py  efficacity_raff_0.005.py  speed_up_raff_0.001.py  speed_up_raff_0.005.py
parallel_faible_MacM1_2slots/: prog_speedup_efficacite.py
parallel_fort/: efficacite_fort.py  speedUp_fort.py
(+1 files in other folders)
